Added the python-shell npm package. Updated renderer.js to use the shell package afor IPC Test B.

--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "python-shell": "^2.0.1"
+  }
 }
