--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "client",
   "version": "1.0.0",
   "description": "client configuration for dashboard test",
-  "main": "index.js",
+  "main": "./src/client/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "python-shell": "^2.0.1"
+  },
+  "devDependencies": {
+    "electron": "^9.0.3"
   }
 }
