--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,8 @@ flask_wtf==0.14.3
 marshmallow==3.5.1
 marshmallow_sqlalchemy==0.23.0
 python_dateutil==2.8.1
-requests=2.23.0
+requests==2.23.0
 selenium==3.141.0
 sqlalchemy==1.3.16
 wtforms==2.3.1
+Flask_caching
