adding conda-forge under channels, in qca-dashboard.yml

--- a/qca-dashboard.yml
+++ b/qca-dashboard.yml
@@ -1,6 +1,8 @@
 name: qca-dashboard
 channels:
+  - conda-forge
   - defaults
+  
 dependencies:
   - python>=3.8
   # Nodejs needed for npm! Pip version is different
