--- a/qca-dashboard.yml
+++ b/qca-dashboard.yml
@@ -4,7 +4,7 @@ channels:
   - defaults
   
 dependencies:
-  - python>=3.8
+  - python==3.8
   # Nodejs needed for npm! Pip version is different
   - nodejs
   - qcportal
