--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ venv
 # other
 .DS_Store
 
-# sphinx docs 
+# sphinx docs
 _build
 _static
 _templates
@@ -26,3 +26,7 @@ _templates
 # javascript
 package-lock.json
 .vscode/symbols.json
+
+.idea/
+.env
+app/base/static/data/*.*
