--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-flask==1.1.2
-flask_login==0.5.0
-flask_migrate==2.7.0
-flask_wtf==0.14.3
-flask_sqlalchemy==2.4.4
-sqlalchemy==1.3.23
-email_validator==1.1.2
-python-decouple==3.4
-gunicorn==20.0.4
+flask>=1.1.2
+flask_login
+flask_migrate
+flask_wtf>=0.14.3
+flask_sqlalchemy>=2.5
+sqlalchemy>=1.4.11
+email_validator>=1.1.2
+python-decouple>=3.4
+gunicorn>=20.0.4
+flask_caching>=1.10.1
+python-dotenv
