--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,5 @@ python-decouple>=3.4
 gunicorn>=20.0.4
 flask_caching>=1.10.1
 python-dotenv
-
+git+git://github.com/MolSSI/QCFractal@v0.50a6#egg=qcfractal
 #qcportal
