--- a/requirements.txt
+++ b/requirements.txt
@@ -10,5 +10,4 @@ python-decouple>=3.4
 gunicorn>=20.0.4
 flask_caching>=1.10.1
 python-dotenv
-git+git://github.com/MolSSI/qcportal@v0.50a6#egg=qcportal
-#qcportal
+git+https://github.com/MolSSI/qcfractal@next#egg=qcportal&subdirectory=qcportal
